--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,5 +64,5 @@
   "editor.cursorBlinking": "blink",
   "editor.cursorSmoothCaretAnimation": "off",
   "workbench.activityBar.iconClickBehavior": "toggle",
-  "cSpell.words": ["AABB", "Cubemap", "Processer"]
+  "cSpell.words": ["AABB", "Cubemap", "improvments", "Processer"]
 }
