--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,10 +59,27 @@
     "dense": "cpp",
     "numeric": "cpp",
     "random": "cpp",
-    "thread": "cpp"
+    "thread": "cpp",
+    "bit": "cpp",
+    "charconv": "cpp",
+    "compare": "cpp",
+    "concepts": "cpp",
+    "format": "cpp",
+    "numbers": "cpp",
+    "semaphore": "cpp",
+    "span": "cpp",
+    "stop_token": "cpp",
+    "text_encoding": "cpp",
+    "variant": "cpp"
   },
   "editor.cursorBlinking": "blink",
   "editor.cursorSmoothCaretAnimation": "off",
   "workbench.activityBar.iconClickBehavior": "toggle",
-  "cSpell.words": ["AABB", "Cubemap", "improvments", "Processer"]
+  "cSpell.words": [
+    "AABB",
+    "Cubemap",
+    "improvments",
+    "Processer"
+  ],
+  "cmake.ignoreCMakeListsMissing": true
 }
